# ginomascardo-regex

./: .travis.yml  CMakeLists.txt  pom.xml
src/: malloc.c  showsizes.c
src/cs345/regex/: NFA.java  Regex.java  RegexParser.java
test/: MALLOC_FREE_TRACE.trace  replay.c  replay.h  test_basic_sanity.c  test_replay.c
test/cs345/regex/: TestMatching.java
